build(poetry): add pre-commit to group pre-commit

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,10 @@ sphinx-book-theme = "^1.0.1"
 rich = "^13.6.0"
 myst-parser = "^2.0.0"
 
+
+[tool.poetry.group.pre-commit.dependencies]
+pre-commit = "^3.5.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
